--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="split-the-check app" />
-    <title>React App</title>
+    <title>Split-the-check</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
